[project]
name = "henderson-lab-brain-gvb"
version = "0.1.0"
description = "Analysis pipeline for analyzing images of GVBs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "natsort>=8.4.0",
    "numpy>=2.5.1",
    "oic-toolkit",
    "opencv-python>=5.0.0.93",
    "scikit-image>=0.26.0",
    "tifffile>=2026.6.1",
    "tqdm>=4.68.4",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "shared"
module-root = ""

[tool.uv.sources]
oic-toolkit = { path = "../../Toolboxes/oic-toolkit", editable = true }
